Update Web forms - MDN
I've changed:
- Styling web forms

--- a/_mdn-study/_html-study/_texts-html-practicing/web-forms-practice.html
+++ b/_mdn-study/_html-study/_texts-html-practicing/web-forms-practice.html
@@ -868,25 +868,25 @@
                         <legend>Which framework do you want to learn first?</legend>
                         <fieldset class="first-css-fw">
                             <legend>CSS framework</legend>
-                            <input type="radio" name="first-css-framework" id="semantic-ui" value="Semantic-UI">
-                            <label for="semantic-ui">Semantic UI</label>
-                            <input type="radio" name="first-css-framework" id="pure" value="Pure">
-                            <label for="pure">Pure</label>
-                            <input type="radio" name="first-css-framework" id="miligram" value="Miligram">
-                            <label for="miligram">Miligram</label>
+                            <input type="radio" name="first-css-framework" id="first-semantic-ui" value="Semantic-UI">
+                            <label for="first-semantic-ui">Semantic UI</label>
+                            <input type="radio" name="first-css-framework" id="first-pure" value="Pure">
+                            <label for="first-pure">Pure</label>
+                            <input type="radio" name="first-css-framework" id="first-miligram" value="Miligram">
+                            <label for="first-miligram">Miligram</label>
                             <input type="radio" name="first-css-framework" id="none" value="None">
                             <label for="none">None</label>
                         </fieldset>
                         <fieldset class="first-js-fw">
                             <legend>JavaScript framework</legend>
-                            <input type="radio" name="first-js-framework" id="bootstrap" value="Bootstrap">
-                            <label for="bootstrap">Bootstrap</label>
-                            <input type="radio" name="first-js-framework" id="angularjs" value="AngularJS">
-                            <label for="angularjs">AngularJS</label>  
-                            <input type="radio" name="first-js-framework" id="ember-js" value="Ember.js">
-                            <label for="ember-js">Ember.js</label>
-                            <input type="radio" name="first-js-framework" id="none" value="None">
-                            <label for="none">None</label>
+                            <input type="radio" name="first-js-framework" id="first-bootstrap" value="Bootstrap">
+                            <label for="first-bootstrap">Bootstrap</label>
+                            <input type="radio" name="first-js-framework" id="first-angularjs" value="AngularJS">
+                            <label for="first-angularjs">AngularJS</label>  
+                            <input type="radio" name="first-js-framework" id="first-ember-js" value="Ember.js">
+                            <label for="first-ember-js">Ember.js</label>
+                            <input type="radio" name="first-js-framework" id="none2" value="None">
+                            <label for="none2">None</label>
                         </fieldset>
                     </fieldset>
                 </fieldset>
