Update Web forms - MDN
It covers:
- Advanced form styling

--- a/_mdn-study/_html-study/_texts-html-practicing/web-forms-practice.html
+++ b/_mdn-study/_html-study/_texts-html-practicing/web-forms-practice.html
@@ -801,6 +801,10 @@
                             <label for="email2">Email:</label>
                             <input type="email" id="email2" name="user_email">
                         </li>
+                        <li>
+                            <label for="profile-picture">Send your profile picture</label>
+                            <input type="file" id="profile-picture" name="profile_picture">
+                        </li>
                     </ul>
                 </fieldset>
                 <fieldset class="your-preferences">
@@ -896,6 +900,18 @@
                         <li>
                             <label for="message2">Let a message for us:</label>
                             <textarea name="message2" id="message2"></textarea>
+                        </li>
+                        <li class="select">
+                            <label for="heard-about-us">Select where did you heard about us:</label>
+                            <select name="" id="heard-about-us">
+                                <option value="notreplied" selected>-------</option>
+                                <option>Facebook</option>
+                                <option>Instagram</option>
+                                <option>WhatsApp</option>
+                                <option>LinkedIn</option>
+                                <option>Workplace</option>
+                                <option>Other source</option>
+                            </select>
                         </li>
                     </ul>
                 </fieldset>
